; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/comctl32/extr_propsheet.c_OnCommand.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/comctl32/extr_propsheet.c_OnCommand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EN_CHANGE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@s_bNotified = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32, i32)* @OnCommand to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @OnCommand(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %6, align 4
  switch i32 %9, label %25 [
    i32 129, label %10
    i32 130, label %10
    i32 128, label %14
  ]

10:                                               ; preds = %4, %4
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @EndDialog(i32 %11, i32 %12)
  br label %25

14:                                               ; preds = %4
  %15 = load i32, i32* %8, align 4
  %16 = load i32, i32* @EN_CHANGE, align 4
  %17 = icmp eq i32 %15, %16
  br i1 %17, label %18, label %24

18:                                               ; preds = %14
  %19 = load i32, i32* @TRUE, align 4
  store i32 %19, i32* @s_bNotified, align 4
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @GetParent(i32 %20)
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @PropSheet_Changed(i32 %21, i32 %22)
  br label %24

24:                                               ; preds = %18, %14
  br label %25

25:                                               ; preds = %4, %24, %10
  ret void
}

declare dso_local i32 @EndDialog(i32, i32) #1

declare dso_local i32 @PropSheet_Changed(i32, i32) #1

declare dso_local i32 @GetParent(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
